--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "gulp-util": "~3.0.0",
     "jshint-stylish": "~0.4.0",
     "karma-jasmine": "~0.1.5",
-    "karma": "~0.12.21"
+    "karma": "~0.12.21",
+    "gulp-jsdoc": "~0.1.4",
+    "jsdoc": "~3.3.0-alpha2",
+    "jsdoc-githubify": "~0.1.3"
   },
   "dependencies": {
     "bower": "~1.3.9"
