--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "karma-jasmine": "~0.1.5",
     "karma": "~0.12.21",
     "gulp-jsdoc": "~0.1.4",
-    "jsdoc": "~3.3.0-alpha2",
-    "jsdoc-githubify": "~0.1.3"
+    "jsdoc": "3.3.0-alpha2"
   },
   "dependencies": {
-    "bower": "~1.3.9"
+    "bower": "~1.3.9",
+    "express": "~4.9.5"
   }
 }
